--- a/content/blog/aerial-panoramas-techniques-drone-photography.mdx
+++ b/content/blog/aerial-panoramas-techniques-drone-photography.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Aerial Panoramas: Techniques for Drone Photography"
-slug: "aerial-panoramas-techniques-drone-photography"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Aerial Panoramas: Techniques for Drone Photography'
+slug: aerial-panoramas-techniques-drone-photography
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - 360-degree-photography
+  - aerial-panoramas
 ---
 
 Aerial panoramas offer a unique perspective, transforming ordinary landscapes into breathtaking vistas. This guide explores techniques for creating stunning 360-degree drone photographs, helping you elevate your aerial photography skills.
