--- a/content/blog/architectural-photography-with-panoramic-techniques.mdx
+++ b/content/blog/architectural-photography-with-panoramic-techniques.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Architectural Photography with Panoramic Techniques"
-slug: "architectural-photography-with-panoramic-techniques"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: Architectural Photography with Panoramic Techniques
+slug: architectural-photography-with-panoramic-techniques
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+  - panoramic-photography-techniques
+tags:
+  - distortion-correction
+  - wide-angle-lenses
 ---
 
 Panoramic photography opens up a world of possibilities for capturing breathtaking landscapes and expansive scenes. This guide explores techniques and applications for creating stunning panoramic images.
