--- a/content/blog/avoiding-parallax-error-panoramic-photography.mdx
+++ b/content/blog/avoiding-parallax-error-panoramic-photography.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Avoiding Parallax Error in Panoramic Photography"
-slug: "avoiding-parallax-error-panoramic-photography"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: Avoiding Parallax Error in Panoramic Photography
+slug: avoiding-parallax-error-panoramic-photography
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - nodal-point
+  - parallax-error
 ---
 
 Panoramic photography offers stunning wide-angle views, but parallax error can ruin the final image. This article explores techniques to avoid parallax and capture seamless panoramas.
