--- a/content/blog/building-panoramic-photography-portfolio.mdx
+++ b/content/blog/building-panoramic-photography-portfolio.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Building a Panoramic Photography Portfolio"
-slug: "building-panoramic-photography-portfolio"
-date: "2024-12-07"
-type: "post"
-status: "publish"
+title: Building a Panoramic Photography Portfolio
+slug: building-panoramic-photography-portfolio
+date: '2024-12-07'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+tags:
+  - panoramic-image-viewers
+  - panoramic-storytelling
 ---
 
 Panoramic photography captures wide-angle views, offering a unique perspective of landscapes, cityscapes, and interiors. This guide will help you create a stunning panoramic portfolio that showcases your skills and attracts potential clients.
