--- a/content/blog/capturing-night-sky-panoramas.mdx
+++ b/content/blog/capturing-night-sky-panoramas.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Capturing the Night Sky in Panoramas"
-slug: "capturing-night-sky-panoramas"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: Capturing the Night Sky in Panoramas
+slug: capturing-night-sky-panoramas
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - exposure
+  - night-panoramas
 ---
 
 Panoramic night sky photography offers a unique way to showcase the beauty of the cosmos. This article explores techniques for creating stunning night panoramas, from equipment selection to post-processing tips.
