--- a/content/blog/choosing-right-aspect-ratio-panoramas.mdx
+++ b/content/blog/choosing-right-aspect-ratio-panoramas.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Choosing the Right Aspect Ratio for Your Panoramas"
-slug: "choosing-right-aspect-ratio-panoramas"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: Choosing the Right Aspect Ratio for Your Panoramas
+slug: choosing-right-aspect-ratio-panoramas
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+  - panoramic-post-processing
+tags:
+  - aspect-ratio
+  - panoramic-cropping
 ---
 
 Panoramic photography opens up a world of creative possibilities. The aspect ratio you choose can make or break your final image. This guide will help you select the perfect aspect ratio for your panoramas, whether you're shooting landscapes, cityscapes, or interiors.
