--- a/content/blog/composition-techniques-panoramic-photography.mdx
+++ b/content/blog/composition-techniques-panoramic-photography.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Composition Techniques for Panoramic Photography"
-slug: "composition-techniques-panoramic-photography"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: Composition Techniques for Panoramic Photography
+slug: composition-techniques-panoramic-photography
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - aspect-ratio
+  - composition
 ---
 
 Panoramic photography allows you to capture breathtaking wide-angle scenes. This guide explores composition techniques and aspect ratios for creating stunning panoramas.
