--- a/content/blog/creating-panoramic-cityscapes-techniques-urban.mdx
+++ b/content/blog/creating-panoramic-cityscapes-techniques-urban.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Creating Panoramic Cityscapes: Techniques for Urban Photography"
-slug: "creating-panoramic-cityscapes-techniques-urban"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Creating Panoramic Cityscapes: Techniques for Urban Photography'
+slug: creating-panoramic-cityscapes-techniques-urban
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - hdr-panoramas
+  - night-panoramas
 ---
 
 Panoramic cityscapes offer a breathtaking view of urban landscapes, showcasing the grandeur and complexity of modern cities. This guide explores techniques for creating stunning panoramic photographs of urban environments, including night and HDR panoramas.
