--- a/content/blog/creating-time-lapse-panoramas-merging.mdx
+++ b/content/blog/creating-time-lapse-panoramas-merging.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Creating Time-Lapse Panoramas: Merging Time and Space"
-slug: "creating-time-lapse-panoramas-merging"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Creating Time-Lapse Panoramas: Merging Time and Space'
+slug: creating-time-lapse-panoramas-merging
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+  - panoramic-photography-techniques
+tags:
+  - panoramic-workflow
+  - time-lapse-panoramas
 ---
 
 Time-lapse panoramas combine the beauty of wide-angle photography with the dynamic element of time progression. This technique allows photographers to create stunning visual narratives that showcase both spatial and temporal changes in a single image. By merging multiple panoramic shots taken over an extended period, you can capture breathtaking scenes that tell a unique story.
