--- a/content/blog/cylindrical-vs-spherical-projections-choose.mdx
+++ b/content/blog/cylindrical-vs-spherical-projections-choose.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Cylindrical vs. Spherical Projections: Which to Choose and Why"
-slug: "cylindrical-vs-spherical-projections-choose"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Cylindrical vs. Spherical Projections: Which to Choose and Why'
+slug: cylindrical-vs-spherical-projections-choose
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+  - panoramic-post-processing
+tags:
+  - cylindrical-projection
+  - spherical-panoramas
 ---
 
 Panoramic photography opens up new creative possibilities, allowing photographers to capture sweeping vistas and immersive scenes. This article explores the key differences between cylindrical and spherical projections, helping you choose the right technique for your panoramic shots.
