--- a/content/blog/equirectangular-projection-explained-beginners.mdx
+++ b/content/blog/equirectangular-projection-explained-beginners.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Equirectangular Projection Explained for Beginners"
-slug: "equirectangular-projection-explained-beginners"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: Equirectangular Projection Explained for Beginners
+slug: equirectangular-projection-explained-beginners
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+  - panoramic-post-processing
+tags:
+  - equirectangular-projection
 ---
 
 Equirectangular projection is a powerful technique used in panoramic photography to create immersive, 360-degree images. This article explores the basics of equirectangular projection, its applications, and how to master it for stunning panoramic shots.
