--- a/content/blog/exposure-challenges-panoramic-photography-overcome.mdx
+++ b/content/blog/exposure-challenges-panoramic-photography-overcome.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Exposure Challenges in Panoramic Photography and How to Overcome Them"
-slug: "exposure-challenges-panoramic-photography-overcome"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: Exposure Challenges in Panoramic Photography and How to Overcome Them
+slug: exposure-challenges-panoramic-photography-overcome
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - exposure
+  - hdr-panoramas
 ---
 
 Panoramic photography captures stunning wide-angle views. But it comes with unique exposure challenges. This article explores common issues and practical solutions for creating well-exposed panoramas.
