--- a/content/blog/famous-panoramic-photographs-changed-history.mdx
+++ b/content/blog/famous-panoramic-photographs-changed-history.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Famous Panoramic Photographs That Changed History"
-slug: "famous-panoramic-photographs-changed-history"
-date: "2024-12-11"
-type: "post"
-status: "publish"
+title: Famous Panoramic Photographs That Changed History
+slug: famous-panoramic-photographs-changed-history
+date: '2024-12-11'
+type: post
+status: publish
+categories:
+  - panoramic-history-and-culture
+tags:
+  - panoramic-art
+  - panoramic-storytelling
 ---
 
 Panoramic photographs have shaped our perception of history, culture, and art. These wide-angle images capture expansive scenes, offering viewers a broader perspective of events and landscapes. This article explores famous panoramic photographs that left an indelible mark on history and culture.
