--- a/content/blog/fisheye-lenses-panoramic-photography-creative.mdx
+++ b/content/blog/fisheye-lenses-panoramic-photography-creative.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Fisheye Lenses in Panoramic Photography: Creative Applications"
-slug: "fisheye-lenses-panoramic-photography-creative"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Fisheye Lenses in Panoramic Photography: Creative Applications'
+slug: fisheye-lenses-panoramic-photography-creative
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - composition
+  - fisheye-lenses
 ---
 
 Fisheye lenses offer a unique perspective in panoramic photography, enabling photographers to capture ultra-wide-angle views with creative distortion. This article explores how to harness the power of fisheye lenses for stunning panoramic shots.
