--- a/content/blog/focal-length-considerations-panoramic-photography.mdx
+++ b/content/blog/focal-length-considerations-panoramic-photography.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Focal Length Considerations in Panoramic Photography"
-slug: "focal-length-considerations-panoramic-photography"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: Focal Length Considerations in Panoramic Photography
+slug: focal-length-considerations-panoramic-photography
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - focal-length
+  - wide-angle-lenses
 ---
 
 Panoramic photography captures breathtaking wide-angle views, but choosing the right focal length is key. This guide explores focal length considerations for stunning panoramas, helping you create immersive images that transport viewers.
