--- a/content/blog/gigapixel-panoramas-pushing-boundaries-detail.mdx
+++ b/content/blog/gigapixel-panoramas-pushing-boundaries-detail.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Gigapixel Panoramas: Pushing the Boundaries of Detail"
-slug: "gigapixel-panoramas-pushing-boundaries-detail"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Gigapixel Panoramas: Pushing the Boundaries of Detail'
+slug: gigapixel-panoramas-pushing-boundaries-detail
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+  - panoramic-post-processing
+tags:
+  - gigapixel-photography
+  - image-quality
 ---
 
 Gigapixel panoramas represent a leap forward in high-resolution photography. This article explores techniques, tools, and tips for capturing stunning, ultra-detailed panoramic images. We'll cover essential equipment, shooting strategies, and post-processing methods to help you create breathtaking gigapixel panoramas.
