--- a/content/blog/hdr-panoramas-capturing-high-dynamic.mdx
+++ b/content/blog/hdr-panoramas-capturing-high-dynamic.mdx
@@ -1,9 +1,15 @@
 ---
-title: "HDR Panoramas: Capturing High Dynamic Range in Wide Scenes"
-slug: "hdr-panoramas-capturing-high-dynamic"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'HDR Panoramas: Capturing High Dynamic Range in Wide Scenes'
+slug: hdr-panoramas-capturing-high-dynamic
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+  - panoramic-post-processing
+tags:
+  - exposure
+  - hdr-panoramas
 ---
 
 HDR panoramas combine two powerful photographic techniques to capture stunning wide-angle scenes with enhanced dynamic range. This guide will help you navigate the process of creating breathtaking HDR panoramas, from equipment setup to post-processing techniques.
