--- a/content/blog/mastering-hasselblad-xpan-tips-tricks.mdx
+++ b/content/blog/mastering-hasselblad-xpan-tips-tricks.mdx
@@ -1,9 +1,16 @@
 ---
-title: "Mastering the Hasselblad XPan: Tips and Tricks"
-slug: "mastering-hasselblad-xpan-tips-tricks"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Mastering the Hasselblad XPan: Tips and Tricks'
+slug: mastering-hasselblad-xpan-tips-tricks
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-camera-gear
+  - panoramic-photography-techniques
+tags:
+  - composition
+  - exposure
+  - hasselblad-xpan
 ---
 
 The Hasselblad XPan stands out as a unique tool for panoramic photography. This article explores essential techniques and gear to help you master this exceptional camera.
