--- a/content/blog/mastering-photospheres-360-degree-photography.mdx
+++ b/content/blog/mastering-photospheres-360-degree-photography.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Mastering Photospheres: 360-Degree Photography on Your Smartphone"
-slug: "mastering-photospheres-360-degree-photography"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Mastering Photospheres: 360-Degree Photography on Your Smartphone'
+slug: mastering-photospheres-360-degree-photography
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+  - panoramic-photography-techniques
+tags:
+  - mobile-panoramas
+  - photosphere
 ---
 
 Photospheres offer a unique way to capture and share immersive 360-degree images. This article explores the essentials of creating stunning photospheres using your smartphone, covering techniques, apps, and tips for impressive results.
