--- a/content/blog/maximizing-depth-field-panoramic-landscapes.mdx
+++ b/content/blog/maximizing-depth-field-panoramic-landscapes.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Maximizing Depth of Field in Panoramic Landscapes"
-slug: "maximizing-depth-field-panoramic-landscapes"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: Maximizing Depth of Field in Panoramic Landscapes
+slug: maximizing-depth-field-panoramic-landscapes
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - depth-of-field
+  - wide-angle-lenses
 ---
 
 Panoramic landscape photography captures breathtaking vistas in stunning detail. This guide offers practical tips to help you master the techniques for creating wide-angle masterpieces with maximum depth of field.
