--- a/content/blog/mobile-panoramas-getting-most-smartphone.mdx
+++ b/content/blog/mobile-panoramas-getting-most-smartphone.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Mobile Panoramas: Getting the Most from Your Smartphone"
-slug: "mobile-panoramas-getting-most-smartphone"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Mobile Panoramas: Getting the Most from Your Smartphone'
+slug: mobile-panoramas-getting-most-smartphone
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+  - panoramic-photography-techniques
+tags:
+  - mobile-panoramas
+  - photosphere
 ---
 
 Smartphone cameras have revolutionized photography, putting powerful tools in our pockets. One standout feature is panoramic photography, allowing users to capture breathtaking wide-angle shots. This article explores techniques and applications for creating stunning mobile panoramas.
