--- a/content/blog/panoramic-event-photography-capturing-scene.mdx
+++ b/content/blog/panoramic-event-photography-capturing-scene.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Panoramic Event Photography: Capturing the Whole Scene"
-slug: "panoramic-event-photography-capturing-scene"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Panoramic Event Photography: Capturing the Whole Scene'
+slug: panoramic-event-photography-capturing-scene
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+  - panoramic-photography-techniques
+tags:
+  - composition
+  - panoramic-workflow
 ---
 
 Panoramic event photography offers a unique way to capture the entire atmosphere of an occasion. This article explores techniques and applications for creating stunning wide-angle shots that tell a complete story.
