--- a/content/blog/panoramic-fashion-photography-runway-editorial.mdx
+++ b/content/blog/panoramic-fashion-photography-runway-editorial.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Panoramic Fashion Photography: Runway and Editorial Techniques"
-slug: "panoramic-fashion-photography-runway-editorial"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Panoramic Fashion Photography: Runway and Editorial Techniques'
+slug: panoramic-fashion-photography-runway-editorial
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - composition
+  - panoramic-film-cameras
 ---
 
 Capturing the grandeur of runway shows and editorial spreads requires a unique approach. Panoramic fashion photography offers a solution, allowing photographers to showcase entire collections and expansive sets in a single, sweeping image. This article explores techniques for mastering panoramic fashion photography, from equipment selection to post-processing tips.
