--- a/content/blog/panoramic-food-photography-presenting-culinary.mdx
+++ b/content/blog/panoramic-food-photography-presenting-culinary.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Panoramic Food Photography: Presenting Culinary Spreads"
-slug: "panoramic-food-photography-presenting-culinary"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Panoramic Food Photography: Presenting Culinary Spreads'
+slug: panoramic-food-photography-presenting-culinary
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - composition
+  - lighting
 ---
 
 Panoramic food photography offers a unique way to showcase culinary creations. This article explores techniques for composing, lighting, and presenting mouthwatering food spreads in a wide-angle format.
