--- a/content/blog/panoramic-industrial-photography-documenting-projects.mdx
+++ b/content/blog/panoramic-industrial-photography-documenting-projects.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Panoramic Industrial Photography: Documenting Large-Scale Projects"
-slug: "panoramic-industrial-photography-documenting-projects"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Panoramic Industrial Photography: Documenting Large-Scale Projects'
+slug: panoramic-industrial-photography-documenting-projects
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+  - panoramic-photography-techniques
+tags:
+  - gigapixel-photography
+  - wide-angle-lenses
 ---
 
 Panoramic industrial photography presents unique challenges and opportunities. This guide explores techniques for documenting large-scale projects effectively.
