--- a/content/blog/panoramic-nature-photography-capturing-landscape.mdx
+++ b/content/blog/panoramic-nature-photography-capturing-landscape.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Panoramic Nature Photography: Capturing the Grand Landscape"
-slug: "panoramic-nature-photography-capturing-landscape"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Panoramic Nature Photography: Capturing the Grand Landscape'
+slug: panoramic-nature-photography-capturing-landscape
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - composition
+  - wide-angle-lenses
 ---
 
 Panoramic nature photography captures wide, sweeping landscapes in a single image. This technique allows photographers to showcase the grandeur of natural scenes, from vast mountain ranges to expansive coastlines.
