--- a/content/blog/panoramic-photography-archaeology-documenting-sites.mdx
+++ b/content/blog/panoramic-photography-archaeology-documenting-sites.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Panoramic Photography in Archaeology: Documenting Sites and Artifacts"
-slug: "panoramic-photography-archaeology-documenting-sites"
-date: "2024-12-09"
-type: "post"
-status: "publish"
+title: 'Panoramic Photography in Archaeology: Documenting Sites and Artifacts'
+slug: panoramic-photography-archaeology-documenting-sites
+date: '2024-12-09'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+tags:
+  - gigapixel-photography
+  - virtual-tours
 ---
 
 Panoramic photography revolutionizes archaeological documentation. This article explores its applications, techniques, and benefits for capturing sites and artifacts.
