--- a/content/blog/panoramic-photography-astronomy-capturing-cosmos.mdx
+++ b/content/blog/panoramic-photography-astronomy-capturing-cosmos.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Panoramic Photography in Astronomy: Capturing the Cosmos"
-slug: "panoramic-photography-astronomy-capturing-cosmos"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Panoramic Photography in Astronomy: Capturing the Cosmos'
+slug: panoramic-photography-astronomy-capturing-cosmos
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - equirectangular-projection
+  - night-panoramas
 ---
 
 Panoramic astronomy photography opens up a world of possibilities for stargazers and astrophotographers. This article explores techniques for creating stunning night sky panoramas, with a focus on equirectangular projection. We'll cover essential equipment, planning your shoot, and post-processing tips to help you capture breathtaking views of the cosmos.
