--- a/content/blog/panoramic-photography-beginners-essential-gear.mdx
+++ b/content/blog/panoramic-photography-beginners-essential-gear.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Panoramic Photography for Beginners: Essential Gear and Techniques"
-slug: "panoramic-photography-beginners-essential-gear"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Panoramic Photography for Beginners: Essential Gear and Techniques'
+slug: panoramic-photography-beginners-essential-gear
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-camera-gear
+  - panoramic-photography-techniques
+tags:
+  - panoramic-tripod-heads
+  - wide-angle-lenses
 ---
 
 Panoramic photography captures wide, sweeping views that immerse viewers in expansive landscapes or detailed interiors. This guide covers the key equipment and techniques for creating stunning panoramas.
