--- a/content/blog/panoramic-photography-competitions-judges-look.mdx
+++ b/content/blog/panoramic-photography-competitions-judges-look.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Panoramic Photography Competitions: What Judges Look For"
-slug: "panoramic-photography-competitions-judges-look"
-date: "2024-12-08"
-type: "post"
-status: "publish"
+title: 'Panoramic Photography Competitions: What Judges Look For'
+slug: panoramic-photography-competitions-judges-look
+date: '2024-12-08'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+tags:
+  - composition
+  - image-quality
 ---
 
 Panoramic photography offers a unique way to showcase vast landscapes and immersive scenes. This article explores what judges look for in panoramic photography competitions and how to apply these principles to your own work.
