--- a/content/blog/panoramic-photography-conservation-environmental-awareness.mdx
+++ b/content/blog/panoramic-photography-conservation-environmental-awareness.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Panoramic Photography for Conservation and Environmental Awareness"
-slug: "panoramic-photography-conservation-environmental-awareness"
-date: "2024-12-08"
-type: "post"
-status: "publish"
+title: Panoramic Photography for Conservation and Environmental Awareness
+slug: panoramic-photography-conservation-environmental-awareness
+date: '2024-12-08'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+tags:
+  - aerial-panoramas
+  - panoramic-storytelling
 ---
 
 Panoramic photography offers a unique way to showcase the beauty of our natural world. This article explores how panoramic techniques can be used for conservation efforts and environmental awareness. We'll cover essential skills, equipment choices, and storytelling methods to create impactful panoramic images.
