--- a/content/blog/panoramic-photography-real-estate-showcasing.mdx
+++ b/content/blog/panoramic-photography-real-estate-showcasing.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Panoramic Photography for Real Estate: Showcasing Properties in Style"
-slug: "panoramic-photography-real-estate-showcasing"
-date: "2024-12-12"
-type: "post"
-status: "publish"
+title: 'Panoramic Photography for Real Estate: Showcasing Properties in Style'
+slug: panoramic-photography-real-estate-showcasing
+date: '2024-12-12'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+tags:
+  - virtual-tours
+  - wide-angle-lenses
 ---
 
 Panoramic photography offers a powerful tool for real estate professionals to showcase properties in stunning detail. This article explores how to leverage panoramic techniques, virtual tours, and wide-angle lenses to create captivating property listings that stand out in a competitive market.
