--- a/content/blog/panoramic-portrait-photography-wide-format.mdx
+++ b/content/blog/panoramic-portrait-photography-wide-format.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Panoramic Portrait Photography: Wide-Format People Pictures"
-slug: "panoramic-portrait-photography-wide-format"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Panoramic Portrait Photography: Wide-Format People Pictures'
+slug: panoramic-portrait-photography-wide-format
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - composition
+  - panoramic-film-cameras
 ---
 
 Panoramic portrait photography offers a unique way to capture people in wide-format images. This technique allows photographers to create striking, immersive portraits that tell a broader story. From group shots to environmental portraits, panoramic photography opens up new creative possibilities.
