--- a/content/blog/panoramic-product-photography-showcasing-items.mdx
+++ b/content/blog/panoramic-product-photography-showcasing-items.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Panoramic Product Photography: Showcasing Items in Context"
-slug: "panoramic-product-photography-showcasing-items"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Panoramic Product Photography: Showcasing Items in Context'
+slug: panoramic-product-photography-showcasing-items
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+  - panoramic-photography-techniques
+tags:
+  - composition
+  - lighting
 ---
 
 Panoramic product photography offers a unique way to showcase items in their natural environment. This technique allows businesses to present products in a wider context, giving customers a better understanding of size, scale, and real-world application. This article explores the benefits of panoramic product photography and provides practical tips for creating stunning 360-degree product images.
