--- a/content/blog/panoramic-techniques-automotive-photography.mdx
+++ b/content/blog/panoramic-techniques-automotive-photography.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Panoramic Techniques for Automotive Photography"
-slug: "panoramic-techniques-automotive-photography"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: Panoramic Techniques for Automotive Photography
+slug: panoramic-techniques-automotive-photography
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - composition
+  - lighting
 ---
 
 Panoramic photography revolutionizes how we capture and showcase vehicles. This article explores essential techniques for creating stunning panoramic images of cars, helping automotive photographers elevate their craft.
