--- a/content/blog/panoramic-travel-photography-capturing-essence.mdx
+++ b/content/blog/panoramic-travel-photography-capturing-essence.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Panoramic Travel Photography: Capturing the Essence of Place"
-slug: "panoramic-travel-photography-capturing-essence"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Panoramic Travel Photography: Capturing the Essence of Place'
+slug: panoramic-travel-photography-capturing-essence
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - composition
+  - panoramic-storytelling
 ---
 
 Panoramic photography offers a unique way to showcase expansive landscapes and cityscapes. This article explores techniques for creating stunning panoramic images that tell a story and transport viewers to distant locations.
