--- a/content/blog/panoramic-wedding-photography-preserving-memories.mdx
+++ b/content/blog/panoramic-wedding-photography-preserving-memories.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Panoramic Wedding Photography: Preserving Wide-Angle Memories"
-slug: "panoramic-wedding-photography-preserving-memories"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Panoramic Wedding Photography: Preserving Wide-Angle Memories'
+slug: panoramic-wedding-photography-preserving-memories
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+  - panoramic-photography-techniques
+tags:
+  - composition
+  - panoramic-printing
 ---
 
 Panoramic wedding photography offers a unique way to capture the grandeur of your special day. This technique allows photographers to create stunning, wide-angle images that encompass entire scenes, from sprawling landscapes to packed reception halls. By mastering panoramic photography, you can preserve memories in a format that truly does justice to the scale and emotion of a wedding.
