--- a/content/blog/sports-photography-using-panoramas-capture.mdx
+++ b/content/blog/sports-photography-using-panoramas-capture.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Sports Photography: Using Panoramas to Capture the Action"
-slug: "sports-photography-using-panoramas-capture"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Sports Photography: Using Panoramas to Capture the Action'
+slug: sports-photography-using-panoramas-capture
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - exposure
+  - panoramic-workflow
 ---
 
 Sports photography is all about freezing dynamic moments. Panoramic techniques can add a new dimension to your shots, showcasing the entire field of play and the atmosphere surrounding it. This guide will help you master the art of panoramic sports photography.
