--- a/content/blog/streamlining-panoramic-workflow-capture-post.mdx
+++ b/content/blog/streamlining-panoramic-workflow-capture-post.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Streamlining Your Panoramic Workflow: From Capture to Post-Processing"
-slug: "streamlining-panoramic-workflow-capture-post"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Streamlining Your Panoramic Workflow: From Capture to Post-Processing'
+slug: streamlining-panoramic-workflow-capture-post
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+  - panoramic-post-processing
+tags:
+  - panoramic-workflow
+  - stitching-software
 ---
 
 Panoramic photography opens up a world of stunning wide-angle vistas. This article guides you through the process of creating breathtaking panoramas, from initial capture to final post-processing.
