--- a/content/blog/street-photography-with-panoramic-cameras.mdx
+++ b/content/blog/street-photography-with-panoramic-cameras.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Street Photography with Panoramic Cameras"
-slug: "street-photography-with-panoramic-cameras"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: Street Photography with Panoramic Cameras
+slug: street-photography-with-panoramic-cameras
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+tags:
+  - composition
+  - hasselblad-xpan
 ---
 
 Panoramic cameras offer a unique perspective for street photography, capturing wide scenes with incredible detail. This guide explores techniques for using panoramic cameras like the Hasselblad XPan to create stunning street images.
