--- a/content/blog/understanding-360-degree-photography-capture.mdx
+++ b/content/blog/understanding-360-degree-photography-capture.mdx
@@ -1,9 +1,15 @@
 ---
-title: "Understanding 360-Degree Photography: From Capture to Viewing"
-slug: "understanding-360-degree-photography-capture"
-date: "2024-09-20"
-type: "post"
-status: "publish"
+title: 'Understanding 360-Degree Photography: From Capture to Viewing'
+slug: understanding-360-degree-photography-capture
+date: '2024-09-20'
+type: post
+status: publish
+categories:
+  - panoramic-photography-techniques
+  - panoramic-post-processing
+tags:
+  - 360-degree-photography
+  - spherical-panoramas
 ---
 
 360-degree photography opens up a whole new dimension in visual storytelling. This guide will walk you through the essentials of capturing, processing, and viewing spherical panoramas.
