--- a/content/blog/using-panoramic-photography-education-training.mdx
+++ b/content/blog/using-panoramic-photography-education-training.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Using Panoramic Photography in Education and Training"
-slug: "using-panoramic-photography-education-training"
-date: "2024-12-09"
-type: "post"
-status: "publish"
+title: Using Panoramic Photography in Education and Training
+slug: using-panoramic-photography-education-training
+date: '2024-12-09'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+tags:
+  - 360-degree-photography
+  - virtual-tours
 ---
 
 Panoramic photography opens up exciting possibilities for educators and trainers. This guide explores how 360-degree images and virtual tours can enhance learning experiences across various fields.
