--- a/content/blog/virtual-reality-and-panoramic-photography.mdx
+++ b/content/blog/virtual-reality-and-panoramic-photography.mdx
@@ -1,9 +1,14 @@
 ---
-title: "Virtual Reality and Panoramic Photography: The Perfect Partnership"
-slug: "virtual-reality-and-panoramic-photography"
-date: "2024-12-11"
-type: "post"
-status: "publish"
+title: 'Virtual Reality and Panoramic Photography: The Perfect Partnership'
+slug: virtual-reality-and-panoramic-photography
+date: '2024-12-11'
+type: post
+status: publish
+categories:
+  - panoramic-applications
+tags:
+  - 360-degree-photography
+  - vr-photography
 ---
 
 VR and panoramic photography are revolutionizing how we capture and experience visual content. This guide explores their synergy, applications, and practical tips for creating immersive experiences.
